create lection backup

--- a/mdk02.01/материал/Тема_1.11/лекция№32_Резервное_копирование.md
+++ b/mdk02.01/материал/Тема_1.11/лекция№32_Резервное_копирование.md
@@ -1,10 +1,510 @@
-# Тема 1.11. Организация резервного копирования и восстановления важной информации
+# Лекция: Создание резервных копий в ОС Linux с акцентом на ALT Linux
 
-## Объем
-2 часа
+## 1. Введение
 
-## Содержание лекции
-- Организация архивирования и резервного копирования. Типы архивов. Установка сервера архивации.
+Резервное копирование (backup) — это процесс создания копий данных с целью их восстановления в случае потери, повреждения или уничтожения.
+В Linux существует множество инструментов и подходов для реализации бэкапов, от простых утилит командной строки до сложных систем управления архивами.
 
-## Связанные лабораторные работы
-- Лабораторное занятие №19: Реализация архивирования и восстановления данных
+**Цель лекции:**
+Ознакомить обучающихся с основными принципами, методами и инструментами резервного копирования в Linux, с особым вниманием к специфике дистрибутива ALT Linux.
+
+## 2. Типы резервного копирования
+
+| Тип | Описание | Преимущества | Недостатки |
+|-----|----------|--------------|------------|
+| Полный (Full) | Копируются все данные | Простота восстановления | Большой объём, долгое время |
+| Инкрементальный (Incremental) | Копируются только изменения с момента последнего бэкапа (любого типа) | Экономия места и времени | Сложность восстановления (нужна цепочка бэкапов) |
+| Дифференциальный (Differential) | Копируются изменения с момента последнего полного бэкапа | Быстрее восстановление, чем при инкрементальном | Больше места, чем при инкрементальном |
+
+**Рекомендация:** Для учебных/тестовых сред — начинать с полного бэкапа. Для продакшена — комбинировать типы.
+
+## 3. Стандартные утилиты Linux для резервного копирования
+
+### 3.1. tar — архиватор
+
+Универсальный инструмент для создания архивов.
+Поддерживает сжатие (gzip, bzip2, xz).
+
+**Пример:**
+```bash
+# Полный бэкап каталога /home
+tar -czf /backup/home_$(date +%F).tar.gz /home
+
+# Восстановление
+tar -xzf /backup/home_2025-01-26.tar.gz -C /
+```
+
+### 3.2. rsync — синхронизация файлов
+
+Идеален для инкрементальных бэкапов.
+Передаёт только изменённые части файлов.
+
+**Пример:**
+```bash
+rsync -av --delete /home/ /backup/home/
+```
+
+**Флаги:**
+- `-a` — архивный режим (сохраняет права, владельца, символические ссылки и т.д.)
+- `-v` — подробный вывод
+- `--delete` — удаляет файлы в целевой директории, если их нет в источнике
+
+### 3.3. dd — побайтовое копирование
+
+Используется для клонирования дисков или разделов.
+
+**Пример:**
+```bash
+dd if=/dev/sda of=/backup/sda.img bs=64K conv=noerror,sync
+```
+
+### 3.4. dump / restore
+
+Специализированные утилиты для резервного копирования ext2/ext3/ext4.
+Поддерживают уровни бэкапа (0–9), где 0 — полный.
+
+**Пример:**
+```bash
+dump -0u -f /backup/root.dump /
+```
+
+## 4. Специфические программы для ALT Linux
+
+В ALT Linux доступен богатый набор инструментов для резервного копирования, как стандартных, так и специализированных.
+
+### 4.1. Системные утилиты ALT Linux
+
+system-backup — специализированная утилита для резервного копирования системы в ALT Linux, которая позволяет создавать полные образы системы с возможностью восстановления.
+
+backrest — инструмент для управления резервными копиями в ALT Linux, обеспечивающий простой интерфейс для настройки и выполнения бэкапов.
+
+### 4.2. Графические приложения
+
+kde-kup — графическое приложение для резервного копирования, интегрированное в KDE-окружение ALT Linux. Предоставляет удобный интерфейс для настройки расписаний и управления бэкапами.
+
+LuckyBackup — мощная графическая утилита для резервного копирования, специально разработанная для работы с ALT Linux и Astra Linux. Поддерживает создание нескольких резервных копий и инкрементальное копирование.
+
+deja-dup — графический интерфейс для утилиты duplicity, доступный в ALT Linux для удобного управления зашифрованными бэкапами.
+
+### 4.3. Серверные решения
+
+proxmox-backup и proxmox-backup-qemu — инструменты для интеграции с Proxmox Backup Server, позволяющие создавать резервные копии виртуальных машин и контейнеров в ALT Linux-окружении.
+
+Burp — клиент-серверная программа для резервного копирования, доступная в ALT Linux. Имеет центральный сервер для хранения копий и клиентские агенты для сбора данных.
+
+### 4.4. Специализированные утилиты
+
+btrfs-assistant — инструмент для работы с файловой системой Btrfs, включая создание снапшотов и управление резервными копиями на основе Btrfs.
+
+ddrescue — утилита для восстановления данных с поврежденных носителей, также используемая для создания резервных копий в сложных ситуациях.
+
+rdiff-backup — скрипт на Python, который создает резервные копии одного каталога в другой и предназначен для периодического запуска (например, ежедневно через cron).
+
+## 5. Планирование бэкапов: cron и systemd timers
+
+### 5.1. Cron
+
+Автоматизация — ключ к надёжности.
+
+**Пример задания в crontab:**
+
+```bash
+# Ежедневный бэкап в 2:00
+0 2 * * * /usr/bin/tar -czf /backup/etc_$(date +\%F).tar.gz /etc
+```
+
+### 5.2. Systemd timers (современный подход)
+
+В ALT Linux p11 и новее рекомендуется использовать systemd timers вместо cron.
+
+**Пример таймера:**
+
+```ini
+# /etc/systemd/system/backup-daily.timer
+[Unit]
+Description=Daily backup timer
+
+[Timer]
+OnCalendar=daily
+Persistent=true
+
+[Install]
+WantedBy=timers.target
+```
+
+```ini
+# /etc/systemd/system/backup-daily.service
+[Unit]
+Description=Daily backup service
+
+[Service]
+Type=oneshot
+ExecStart=/usr/local/bin/backup_script.sh
+```
+
+## 6. Хранение и безопасность
+
+### 6.1. Локальное и удаленное хранение
+
+Локальное хранение: быстро, но уязвимо к аппаратным сбоям.
+Удалённое хранение: через rsync по SSH, rclone, borg, restic.
+
+### 6.2. Шифрование
+
+В ALT Linux активно используются инструменты для шифрования бэкапов:
+
+```bash
+# Шифрование с помощью GPG
+tar -czf - /etc | gpg --symmetric --cipher-algo AES256 > /backup/etc.tar.gz.gpg
+
+# Шифрование с помощью duplicity
+duplicity /etc file:///backup/encrypted_etc --encrypt-key=YOUR_GPG_KEY
+```
+
+## 7. Стратегии бэкапов в ALT Linux
+
+### 7.1. Для рабочих станций
+
+Использование LuckyBackup или deja-dup для автоматического резервного копирования домашних каталогов
+Регулярное создание снапшотов с помощью btrfs-assistant (если используется Btrfs)
+
+### 7.2. Для серверов
+
+Централизованное управление через Burp или proxmox-backup
+Использование system-backup для полного резервного копирования системы
+Инкрементальные бэкапы с rdiff-backup или rsync
+
+### 7.3. Для критически важных данных
+
+Комбинация локального и облачного хранения
+Регулярное тестирование восстановления
+Использование ddrescue для создания образов перед обслуживанием дисков
+
+## 8. Практические примеры для ALT Linux
+
+### 8.1. Пример с LuckyBackup
+
+```bash
+# Установка в ALT Linux
+apt-get update
+apt-get install luckybackup
+
+# Запуск GUI
+luckybackup
+```
+
+### 8.2. Пример с system-backup
+
+```bash
+# Создание полного бэкапа системы
+system-backup create --full --name="full_system_backup_$(date +%F)"
+
+# Восстановление системы
+system-backup restore --name="full_system_backup_2025-01-26"
+```
+
+### 8.3. Пример с rdiff-backup
+
+```bash
+# Установка
+apt-get install rdiff-backup
+
+# Создание бэкапа
+rdiff-backup /home/user /backup/home_user
+
+# Восстановление на определенную дату
+rdiff-backup -r 2025-01-25 /backup/home_user /restore/home_user
+```
+
+## 9. Корпоративные решения для резервного копирования
+
+### 9.1. UrBackup: Клиент-серверная система резервного копирования
+
+**Принцип работы:**
+UrBackup — это клиент-серверная система резервного копирования с открытым исходным кодом, предназначенная для автоматического создания резервных копий файлов и образов дисков. Система работает по следующему принципу:
+
+- Сервер UrBackup устанавливается на центральном сервере и управляет всеми операциями резервного копирования
+- Клиенты UrBackup устанавливаются на рабочих станциях и серверах, которые нужно резервировать
+- Коммуникация происходит через HTTP/HTTPS протоколы
+
+**Типы бэкапов:**
+- File Backup — резервное копирование отдельных файлов и каталогов
+- Image Backup — побайтовое копирование целых разделов или дисков
+- Incremental Backup — инкрементальные копии для экономии места
+
+**Архитектура:**
+
+```
+┌─────────────────┐      ┌─────────────────┐      ┌─────────────────┐
+│  Клиент 1       │      │  Клиент 2       │      │  Клиент N       │
+│  (Windows/Linux)│─────▶│  (Windows/Linux)│─────▶│  (Windows/Linux)│
+└─────────────────┘      └─────────────────┘      └─────────────────┘
+         │                       │                       │
+         ▼                       ▼                       ▼
+┌─────────────────────────────────────────────────────────────────┐
+│                        Сервер UrBackup                         │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+**Настройка в ALT Linux:**
+
+**Шаг 1: Установка сервера**
+
+```bash
+# Добавление репозитория (если требуется)
+sudo apt-get update
+sudo apt-get install urbackup-server
+
+# Запуск и включение автозагрузки
+sudo systemctl start urbackup-server
+sudo systemctl enable urbackup-server
+```
+
+**Шаг 2: Базовая конфигурация сервера**
+Файл конфигурации: /etc/urbackup/urbackup-server.conf
+
+```ini
+# Базовые настройки
+server_port=55414
+server_web_port=55415
+server_https_port=55416
+server_name=urbackup-server
+
+# Пути хранения бэкапов
+backup_path=/var/urbackup
+database_path=/var/urbackup/urbackup.db
+```
+
+**Шаг 3: Установка клиента на ALT Linux**
+
+```bash
+sudo apt-get install urbackup-client
+sudo urbackup-client-setup --server http://backup-server:55414
+sudo systemctl start urbackup-client
+sudo systemctl enable urbackup-client
+```
+
+**Шаг 4: Настройка через веб-интерфейс**
+
+- Открыть в браузере: https://backup-server:55415
+- Залогиниться (по умолчанию: admin/admin)
+- Настроить политики резервного копирования:
+  - File Backup Paths: /home, /etc, /var/lib
+  - Full File Backup Interval: 7 дней
+  - Incremental File Backup Interval: 24 часа
+  - Image Backup: выбор разделов для копирования
+
+**Особенности работы с ALT Linux:**
+
+- Поддержка SELinux/AppArmor в ALT Linux требует дополнительной настройки прав доступа
+- Для полных образов системы рекомендуется использовать режим "Online Image Backup"
+- Интеграция с systemd для мониторинга состояния сервисов
+- Автоматическое обновление клиентов через репозиторий ALT
+
+**Преимущества UrBackup:**
+
+- Единая точка управления для гетерогенной инфраструктуры (Windows/Linux)
+- Веб-интерфейс для мониторинга и управления
+- Поддержка VSS (Volume Shadow Copy) для Windows
+- Дедупликация данных на уровне блоков
+- Возможность восстановления отдельных файлов без полного восстановления образа
+
+### 9.2. Bacula: Корпоративная система резервного копирования
+
+**Принцип работы:**
+Bacula — это мощная, гибкая и масштабируемая система резервного копирования с открытым исходным кодом, предназначенная для предприятий. Bacula работает по принципу разделения функций между несколькими компонентами:
+
+**Архитектура Bacula:**
+
+```
+┌─────────────────┐      ┌─────────────────┐      ┌─────────────────┐
+│  Storage        │      │  Director       │      │  Client (FD)    │
+│  Daemon (SD)    │◀────▶│  (Central Brain)│◀────▶│  File Daemon    │
+└─────────────────┘      └─────────────────┘      └─────────────────┘
+         │                       │                       │
+         ▼                       ▼                       ▼
+┌─────────────────┐      ┌─────────────────┐      ┌─────────────────┐
+│  Tape Library   │      │  Catalog        │      │  Console        │
+└─────────────────┘      └─────────────────┘      └─────────────────┘
+```
+
+**Ключевые компоненты:**
+
+- Director (DIR) — центральный компонент, управляющий всеми операциями
+- Storage Daemon (SD) — отвечает за чтение/запись данных
+- File Daemon (FD) — устанавливается на клиентских машинах
+- Catalog — база данных (обычно MySQL или PostgreSQL)
+
+**Принцип работы:**
+
+1. Администратор создает задание (Job) в конфигурации Director
+2. Director планирует выполнение задания по расписанию
+3. При наступлении времени выполнения:
+   - Director связывается с File Daemon на клиенте
+   - File Daemon собирает список файлов для копирования
+   - Director координирует передачу данных от FD к SD
+   - Storage Daemon записывает данные на носитель
+   - Все метаданные записываются в Catalog
+
+**Настройка Bacula в ALT Linux:**
+
+**Шаг 1: Установка компонентов**
+
+```bash
+# Установка Director и Catalog
+sudo apt-get install bacula-director bacula-sd bacula-fd bacula-console
+sudo apt-get install mysql-server mysql-client bacula-director-mysql
+
+# Инициализация базы данных
+sudo /usr/lib/bacula/make_mysql_tables
+sudo /usr/lib/bacula/grant_mysql_privileges
+sudo /usr/lib/bacula/update_mysql_tables
+```
+
+**Шаг 2: Конфигурация Director (/etc/bacula/bacula-dir.conf)**
+
+```conf
+Director {
+  Name = altlinux-dir
+  DIRport = 9101
+  QueryFile = "/etc/bacula/query.sql"
+  WorkingDirectory = "/var/lib/bacula"
+  PidDirectory = "/var/run/bacula"
+  Maximum Concurrent Jobs = 20
+  Password = "director_password"          # Пароль для Storage Daemon
+  Messages = Daemon
+  DirAddress = 192.168.1.100
+```
+
+**Шаг 3: Конфигурация Storage Daemon (/etc/bacula/bacula-sd.conf)**
+
+```conf
+Storage {
+  Name = altlinux-sd
+  SDPort = 9103
+  WorkingDirectory = "/var/lib/bacula"
+  Pid Directory = "/var/run/bacula"
+  Maximum Concurrent Jobs = 20
+  SDAddress = 192.168.1.100
+}
+
+Device {
+```
+
+**Шаг 4: Конфигурация File Daemon на клиенте (/etc/bacula/bacula-fd.conf)**
+
+```conf
+Director {
+  Name = altlinux-dir
+  Password = "client_password"
+}
+
+FileDaemon {
+  Name = altlinux-fd
+  FDport = 9102
+  WorkingDirectory = /var/lib/bacula
+  Pid Directory = /var/run/bacula
+```
+
+**Шаг 5: Настройка расписания (/etc/bacula/bacula-dir.conf)**
+
+```conf
+Schedule {
+  Name = "WeeklyCycle"
+  Run = Full 1st sun at 23:05
+  Run = Differential 2nd-5th sun at 23:05
+  Run = Incremental mon-sat at 23:05
+}
+```
+
+**Шаг 6: Запуск сервисов и проверка**
+
+```bash
+# Запуск сервисов на сервере
+sudo systemctl start bacula-director
+sudo systemctl start bacula-sd
+sudo systemctl enable bacula-director
+sudo systemctl enable bacula-sd
+
+# Запуск клиента
+sudo systemctl start bacula-fd
+sudo systemctl enable bacula-fd
+```
+
+**Особенности настройки в ALT Linux:**
+
+- Безопасность:
+  - Использование chroot для демонов
+  - Настройка SELinux контекстов для каталогов Bacula
+  - Шифрование каналов связи с помощью TLS
+- Интеграция с ALT:
+  - Использование rpm-пакетов из официального репозитория ALT
+  - Интеграция с systemd для управления сервисами
+  - Поддержка отечественных криптографических алгоритмов
+- Оптимизация производительности:
+  - Настройка больших буферов для работы с быстрыми дисками
+  - Использование сжатия для экономии места
+  - Настройка приоритетов процессов через systemd
+
+**Пример восстановления данных:**
+
+```bash
+# Запуск консоли управления
+sudo bconsole
+
+# Поиск файлов для восстановления
+*restore
+# Выбор клиента
+Select the Client: altlinux-fd
+# Выбор времени восстановления
+Select the Storage: FileStorage
+# Выбор файлов
+```
+
+**Преимущества Bacula:**
+
+- Масштабируемость до тысяч клиентов
+- Поддержка различных типов хранилищ (диски, ленты, облако)
+- Гибкая система заданий и расписаний
+- Мощные возможности восстановления (точка во времени, отдельные файлы)
+- Поддержка дедупликации и сжатия
+- Аудит и отчетность через веб-интерфейсы (Bacula-web, Bweb)
+
+**Недостатки:**
+
+- Сложность начальной настройки
+- Требует опыта работы с базами данных
+- Ресурсоемкость для больших инсталляций
+
+## 10. Современные решения (для расширения)
+
+### 10.1. BorgBackup
+
+- Дедупликация, сжатие, шифрование
+- Идеален для больших объемов данных
+- Поддерживается в ALT Linux
+
+### 10.2. Restic
+
+- Кроссплатформенный, поддержка облаков
+- Быстрое восстановление отдельных файлов
+- Активно используется в ALT Linux-окружениях
+
+### 10.3. Duplicity
+
+- Инкрементальные зашифрованные бэкапы в облако
+- Графический интерфейс через deja-dup
+- Полная поддержка в ALT Linux
+
+## 11. Практические рекомендации
+
+- Тестируйте восстановление — бэкап без проверки = риск.
+- Следите за местом на диске — используйте logrotate или скрипты очистки старых бэкапов.
+- Документируйте процедуры — создайте wiki-страницу с инструкциями.
+- Изолируйте бэкапы — не храните их на том же физическом носителе.
+- Используйте родные инструменты — для ALT Linux предпочтительнее использовать system-backup и backrest для системных задач.
+- Планируйте восстановление — разработайте план действий при необходимости восстановления данных.
+
+## 12. Заключение
+
+Резервное копирование — неотъемлемая часть эксплуатации любой ОС. В ALT Linux доступны как стандартные Linux-инструменты (tar, rsync), так и специализированные программы (system-backup, backrest, LuckyBackup), разработанные специально для этого дистрибутива. Владение этими навыками критически важно для специалиста в области системного администрирования, особенно при работе с отечественными операционными системами.
